added .cache and compile_commands.json to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ###########  FILES  ############
 ################################
 *.pptx
+compile_commands.json
 
 ################################
 ########### FOLDERS ############
@@ -10,6 +11,7 @@ build/
 build-*/
 html/
 .vscode/
+.cache/
 
 ################################
 ############ C/C++ #############
